<resources>
    <string name="app_name">MoveMed</string>
    <string name="title_home">Home</string>
    <string name="chat">Chat</string>
    <string name="settings">Settings</string>
    <string name="napis_svoji_zpravu">Napište zprávu</string>
    <string name="title_activity_prihlaseni">PrihlaseniActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="registrace">Registrace</string>
    <string name="email">Email</string>
    <string name="jmeno_a_prijmeni">Jméno a přijmení</string>
    <string name="uzivatelske_jmeno">Uživatelské jméno</string>
    <string name="heslo">Heslo</string>
    <string name="registrovat_se">Registrovat se</string>
    <string name="uz_mate_ucet">Už máte účet? <b>Přihlaste se</b></string>
    <string name="prihlaseni">Přihlášení</string>
    <string name="prihlasit">Přihlásit</string>
    <string name="Prihlaseni">Přihlášení</string>
    <string name="nemate_zatim_ucet_zaregistrujte_se">Nemáte zatím účet? <b>Zaregistrujte se</b></string>
    <string name="zapomenuti_hesla">Zapomněli jste heslo?</string>
    <string name="zapomenut_hesla">Zapomenutí hesla</string>
    <string name="obnovit_heslo">Obnovit heslo</string>
    <string name="nebo">NEBO</string>
    <string name="pokracovat_pres_google">Pokračovat přes Google</string>
    <string name="profil">Profil</string>
    <string name="prehled">Přehled</string>
    <string name="odhlasit_se">Odhlásit se</string>
    <string name="profilov_obrazek_uzivatele">Profilový obrázek uživatele</string>
    <string name="vyberte_obrazek">Vyberte obrázek</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kroky">kroky</string>
    <string name="zpet">Zpět</string>
    <string name="kg">kg</string>
    <string name="cm">cm</string>
    <string name="wifi_error">Připojení se nezdařilo</string>
    <string name="pripojeni_selhalo">Připojení selhalo!</string>
    <string name="popis_internet">Vypadá to, že nejste připojeni k internetu. \n\nProsím, zkontrolujte své připojení a zkuste to znovu nebo opusťte aplikaci a opakujte to později znovu.</string>
    <string name="o_aplikaci">O aplikaci</string>
    <string name="nastaveni">Nastavení</string>
    <string name="vek">Věk</string>
    <string name="placeholder_kg">— kg</string>
    <string name="vaha">Váha</string>
    <string name="placeholder_cm">— cm</string>
    <string name="vyska">Výška</string>
    <string name="placeholder_datum_narozeni">DD.MM.YY</string>
    <string name="datum_narozeni">Datum narození</string>
    <string name="placeholder_email">email@gmail.com</string>
    <string name="jmeno_prijmeni">Jméno Příjmení</string>
    <string name="placeholder_let">— let</string>
    <string name="zobrazit_heslo">Zobrazit heslo</string>
    <string name="priklad_kroky">8,530</string>
    <string name="priklad_zbyvajicich_kroku">Zbývá 1400 kroků</string>
    <string name="kalorie_a_kroky">Kalorie a Kroky</string>
    <string name="kalorie">KALORIE</string>
    <string name="prubeh_vahy">Průběh vaší váhy</string>
    <string name="tyden">TÝDEN</string>
    <string name="mesic">MĚSÍC</string>
    <string name="rok">ROK</string>
    <string name="obnoveni_hesla">Obnovení hesla</string>
    <string name="oznameni">Oznamení</string>
    <string name="dark_mode">Dark mode</string>
    <string name="cile">Cíle</string>
    <string name="priklad_kroky_placeholder">př. 12,000</string>
    <string name="priklad_vaha_placeholder">př. 80</string>
    <string name="zmenit_udaje">Změnit údaje</string>
    <string name="priklad_vyska_placeholder">př. 180</string>
    <string name="ulozit_zmeny">ULOŽIT ZMĚNY</string>
    <string name="zkusit_to_znovu">Zkusit to znovu</string>
    <string name="whoops">Whoops!</string>
    <string name="poslat_zpravu">Poslat zprávu</string>
    <string name="dokumentace">dokumentace</string>
    <string name="gyarab_logo">Gyarab Logo</string>
    <string name="informace_o_grafu">Pro přesné info klikněte na graf</string>
    <string name="Kroky">Kroky</string>
    <string name="obrazek_ai">Obrázek AI</string>
    <string name="ai_chatbot">AI ChatBot</string>

    <string-array name="nastaveni_vyber_nemoci">

        <item>Obezita</item>
        <item>Anorexie</item>
        <item>Bulimie</item>

    </string-array>
</resources>