<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/radial_gradient"
    android:gravity="center"
    android:orientation="horizontal"
    tools:context=".prihlaseni.Registrace">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/registrace"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/fialova"
                android:textSize="30sp">

            </TextView>

            <EditText
                android:id="@+id/registrace_jmeno_a_prijmeni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints="@string/jmeno_a_prijmeni"
                android:background="@drawable/border_registrace"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="20dp"
                android:hint="@string/jmeno_a_prijmeni"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="#cbcbcb"
                android:textSize="17sp"
                tools:ignore="TextFields">

            </EditText>

            <EditText
                android:id="@+id/registrace_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints="Email"
                android:background="@drawable/border_registrace"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="20dp"
                android:hint="@string/email"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="#cbcbcb"
                android:textSize="17sp"
                tools:ignore="TextFields">

            </EditText>

            <EditText
                android:id="@+id/registrace_uzivatelske_jmeno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints="@string/uzivatelske_jmeno"
                android:background="@drawable/border_registrace"
                android:drawableStart="@drawable/ic_account"
                android:drawablePadding="20dp"
                android:hint="@string/uzivatelske_jmeno"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="#cbcbcb"
                android:textSize="17sp"
                tools:ignore="TextFields">

            </EditText>

            <RelativeLayout
                android:id="@+id/registrace_relative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/registrace_heslo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/heslo"
                    android:background="@drawable/border_registrace"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="20dp"
                    android:hint="@string/heslo"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="20dp"
                    android:textColor="@color/black"
                    android:textColorHint="#cbcbcb"
                    android:textSize="17sp"
                    tools:ignore="TextFields">

                </EditText>

                <ImageButton
                    android:id="@+id/registrace_eye_show"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:paddingEnd="15dp"
                    android:src="@drawable/ic_eye_hide"
                    tools:ignore="RtlSymmetry">

                </ImageButton>

            </RelativeLayout>

            <Button
                android:id="@+id/registrace_button"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="25dp"
                android:text="@string/registrovat_se"
                android:textColor="@color/white"
                app:backgroundTint="@color/modro_fialova">

            </Button>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/nebo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/nebo"

                    android:textColor="@color/black"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_toStartOf="@id/nebo"
                    android:background="@drawable/linear_gradient"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:layout_toEndOf="@id/nebo"
                    android:background="@drawable/linear_gradient"
                    />

            </RelativeLayout>

            <Button
                android:id="@+id/registrace_pres_google_btn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="15dp"
                android:text="@string/pokracovat_pres_google"
                android:background="@drawable/google_prihlaseni"
                android:textColor="@color/modro_fialova"
                android:textSize="12sp"
                android:paddingEnd="25dp"
                android:drawableLeft="@drawable/ic_google"
                android:textAlignment="center"
                app:backgroundTint="@null"
                >

            </Button>

            <TextView
                android:id="@+id/registrace_UzMateUcetPrihlasteSe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/uz_mate_ucet"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp">

            </TextView>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>