<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/radial_gradient"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".prihlaseni.Prihlaseni">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="20dp"
            android:background="@color/white">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/Prihlaseni"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/fialova"
                android:textSize="35sp">

            </TextView>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/prihlaseni_uzivatelske_jmeno"
                android:layout_marginTop="20dp"
                android:background="@drawable/border_registrace"
                android:padding="10dp"
                android:hint="@string/uzivatelske_jmeno"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:textColorHint="#cbcbcb"
                android:drawablePadding="20dp"
                android:drawableStart="@drawable/ic_account"
                android:autofillHints="@string/uzivatelske_jmeno"
                tools:ignore="TextFields">

            </EditText>

            <RelativeLayout
                android:id="@+id/prihlaseni_relative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/prihlaseni_heslo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:autofillHints="@string/heslo"
                    android:background="@drawable/border_registrace"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="20dp"
                    android:hint="@string/heslo"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="#cbcbcb"
                    android:textSize="17sp"
                    tools:ignore="TextFields">

                </EditText>

                <ImageButton
                    android:id="@+id/registrace_eye_show"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@null"
                    android:paddingEnd="15dp"
                    android:paddingTop="30dp"
                    android:paddingBottom="30dp"
                    android:src="@drawable/ic_eye_hide"
                    tools:ignore="RtlSymmetry">

                </ImageButton>

            </RelativeLayout>

            <Button
                android:id="@+id/prihlaseni_button"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:textColor="@color/white"
                android:text="@string/prihlasit"
                app:backgroundTint="#6200ee">

            </Button>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/prihlaseni_nemateUcetZaregistrujteSe"
                android:layout_marginTop="25dp"
                android:text="@string/nemate_zatim_ucet_zaregistrujte_se"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp">

            </TextView>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>